--- a/maket.css
+++ b/maket.css
@@ -17,6 +17,58 @@ body {
   width: 90%;
   margin: auto;
 }
+/* burger menu start  */
+.burger-menu {
+  display: none;
+  width: 98%;
+  height: min-content;
+  background-color: #2c2c33;
+  position: absolute;
+  z-index: 1;
+  top: 1%;
+  left: 1%;
+  right: 1%;
+  border-radius: 10px;
+  border: 2px solid white;
+}
+.burger-menu__content {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+.burger-menu__btn_close {
+  width: 4%;
+  height: 7%;
+  margin: 4% 0;
+  cursor: pointer;
+}
+.burger-menu__input {
+  width: 30%;
+  height: 10%;
+  background-color: transparent;
+  border: 1px solid white;
+  border-radius: 5px;
+}
+.burger-menu__list {
+  height: 60%;
+  list-style-type: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+.burger-menu__item > a {
+  text-decoration: none;
+  color: white;
+  transition: 0.8s;
+}
+.burger-menu__item > a:hover {
+  color: #6d6df3;
+}
+
 /* navbar start  */
 .navbar {
   display: flex;
@@ -42,9 +94,12 @@ body {
 .navbar__input {
   width: 15%;
   height: 25px;
-  background-color: whitesmoke;
+  background-color: transparent;
   border-radius: 5px;
   border: 1px solid white;
+}
+.navbar__btn_burger {
+  /* display: none; */
 }
 
 /* navbar end */
